change swagger list file bug
